--- a/src/app/Components/Experts/epert-basic-info/epert-basic-info.component.html
+++ b/src/app/Components/Experts/epert-basic-info/epert-basic-info.component.html
@@ -32,11 +32,20 @@
     <div class="col-lg-6 col-md-6">
       <div class="form-group ">
         <label>Gender</label>
-        <select class="form-control" formControlName="gender" [ngClass]="{'is-invalid': basicInfoForm.get('gender').errors 
-        && (basicInfoForm.get('gender').touched||submitted)}">
-          <option value="male">Male</option>
-          <option value="female">Female</option>
-        </select>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" formControlName="gender" id="customCheck1payment" value="male">
+              <label class="custom-control-label" for="customCheck1payment"> <span class="">Male </span></label>
+          </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" formControlName="gender" id="customCheck2payment" value="female">
+              <label class="custom-control-label" for="customCheck2payment"> <span class="">Female </span></label>
+          </div>
+          </div>
+        </div>
         <div class="invalid-feedback"
           *ngIf="(basicInfoForm.get('gender').touched||submitted) && basicInfoForm.get('gender').hasError('required')">
           This
