--- a/src/app/Components/Clinics/clinics-todayclinics/clinics-todayclinics.component.html
+++ b/src/app/Components/Clinics/clinics-todayclinics/clinics-todayclinics.component.html
@@ -87,7 +87,8 @@
                 <td>{{liveClinic.medicoRefNo}}</td>
                 <td>
                   <a class="btn btn-primary primary-gradient ml-2"
-                    (click)="showUpdateStatusModel(templateUpdateStatus,liveClinic.scheduleID)">Update Status</a>
+                    (click)="showUpdateStatusModel(templateUpdateStatus,liveClinic.scheduleID,liveClinic.instructionID,liveClinic.expertClinicSlotPlanID)">Update
+                    Status</a>
                 </td>
               </tr>
             </tbody>
@@ -152,7 +153,8 @@
                 <td>{{upComing.medicoRefNo}}</td>
                 <td>
                   <a class="btn btn-primary primary-gradient ml-2"
-                    (click)="showUpdateStatusModel(templateUpdateStatus,upComing.scheduleID)">Update Status</a>
+                    (click)="showUpdateStatusModel(templateUpdateStatus,upComing.scheduleID,upComing.instructionID,upComing.expertClinicSlotPlanID)">Update
+                    Status</a>
                 </td>
               </tr>
             </tbody>
@@ -217,7 +219,8 @@
                 <td>{{previous.medicoRefNo}}</td>
                 <td>
                   <a class="btn btn-primary primary-gradient ml-2"
-                    (click)="showUpdateStatusModel(templateUpdateStatus,previous.scheduleID)">Update Status</a>
+                    (click)="showUpdateStatusModel(templateUpdateStatus,previous.scheduleID,previous.instructionID,previous.expertClinicSlotPlanID)">Update
+                    Status</a>
                 </td>
               </tr>
             </tbody>
@@ -245,8 +248,8 @@
         <li class="list-group-item">
           <div class="custom-control custom-radio">
             <input type="radio" class="custom-control-input" formControlName="state" id="customCheck1payment"
-              value="DNAS">
-            <label class="custom-control-label" for="customCheck1payment"> <span class="">DNAS </span></label>
+              value="DNA">
+            <label class="custom-control-label" for="customCheck1payment"> <span class="">DNA </span></label>
           </div>
         </li>
         <li class="list-group-item">
@@ -272,47 +275,125 @@
 
       <div *ngIf="appointmentUpdateStatusFrom.get('state').value==='Attended'">
         <h4 class="mb-0">Would you like to rate this expert?</h4>
-        <fieldset class="rating">
-          <input type="radio" id="star5" name="rating" value="5" (click)="countStar($event.target.value)" />
-          <label class="full" for="star5" title="Awesome - 5 stars"></label>
-          <input type="radio" id="star4" name="rating" value="4" (click)="countStar($event.target.value)" />
-          <label class="full" for="star4" title="Pretty good - 4 stars"></label>
-          <input type="radio" id="star3" name="rating" value="3" (click)="countStar($event.target.value)" />
-          <label class="full" for="star3" title="Meh - 3 stars"></label>
-          <input type="radio" id="star2" name="rating" value="2" (click)="countStar($event.target.value)" />
-          <label class="full" for="star2" title="Kinda bad - 2 stars"></label>
-          <input type="radio" id="star1" name="rating" value="1"(click)="countStar($event.target.value)" />
-          <label class="full" for="star1" title="Sucks big time - 1 star"></label>
-         <!-- 
-          <input type="radio" id="star4half" name="rating" value="4 and a half" />
-          <label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-           
-          <input type="radio" id="star3half" name="rating" value="3 and a half" />
-          <label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-  
-          <input type="radio" id="star2half" name="rating" value="2 and a half" />
-          <label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-  
-          <input type="radio" id="star1half" name="rating" value="1 and a half" />
-          <label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-          <input type="radio" id="starhalf" name="rating" value="half" />
-          <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label> -->
-        </fieldset>
-      </div>
-     
-      <!-- <div class="row" *ngIf="appointmentUpdateStatusFrom.get('state').value==='Attended'">
-        <div class="col-sm-12">
-          <ul class="list-inline rating-list" *ngFor="let star of stars" style="display: inline-block">
-            <li (click)="countStar(star)" [ngClass]="{'selected': (star <= selectedValue)}">
-              <i class="fa fa-star"></i>
-            </li>
-          </ul>
-        </div>
-      </div> -->
 
+        <div class="row ">
+          <div class="col-lg-12 col-md-12">
+            <fieldset class="rating">
+              <input type="radio" id="star5" name="rating" value="5" (click)="countStar($event.target.value)" />
+              <label class="full" for="star5" title="Awesome - 5 stars"></label>
+              <input type="radio" id="star4" name="rating" value="4" (click)="countStar($event.target.value)" />
+              <label class="full" for="star4" title="Pretty good - 4 stars"></label>
+              <input type="radio" id="star3" name="rating" value="3" (click)="countStar($event.target.value)" />
+              <label class="full" for="star3" title="Meh - 3 stars"></label>
+              <input type="radio" id="star2" name="rating" value="2" (click)="countStar($event.target.value)" />
+              <label class="full" for="star2" title="Kinda bad - 2 stars"></label>
+              <input type="radio" id="star1" name="rating" value="1" (click)="countStar($event.target.value)" />
+              <label class="full" for="star1" title="Sucks big time - 1 star"></label>
+              <!-- 
+              <input type="radio" id="star4half" name="rating" value="4 and a half" />
+              <label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+               
+              <input type="radio" id="star3half" name="rating" value="3 and a half" />
+              <label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+      
+              <input type="radio" id="star2half" name="rating" value="2 and a half" />
+              <label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+      
+              <input type="radio" id="star1half" name="rating" value="1 and a half" />
+              <label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+              <input type="radio" id="starhalf" name="rating" value="half" />
+              <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label> -->
+            </fieldset>
+          </div>
+        </div>
+        <div class="row ">
+          <div class="col-lg-12 col-md-12">
+            <div class="form-group ">
+              <label>Feedback</label>
+              <textarea type="text" formControlName="feedBack" class="form-control"></textarea>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="text-right mt-2 mb-2 mr-2">
       <button type="submit" class="btn btn-primary primary-gradient">Update</button>
     </div>
   </form>
+</ng-template>
+
+<ng-template #templateAssignMedSec>
+  <div class="modal-header bg-primary text-white">
+    <h4 class="modal-title pull-left">Assign Medical Secretary</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="assignMedSecForm" *ngIf="assignMedSecForm" (ngSubmit)="assignMedicalSecretary()">
+      <div class="row">
+        <div class="col-md-6 col-sm-6">
+          <div class="form-group">
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" formControlName="isExpertMedSec" id="customCheck1"
+                value="false" (change)="this.assignMedSecForm.get('medSecID').setValue('')">
+              <label class="custom-control-label" for="customCheck1"> <span class="">Idox Medical Secretary
+                </span></label>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+          <div class="form-group">
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" formControlName="isExpertMedSec" id="customCheck2"
+                value="true" (change)="this.assignMedSecForm.get('medSecID').setValue(0)">
+              <label class="custom-control-label" for="customCheck2"> <span class="">Own Medical Secretary
+                </span></label>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12">
+          <div class="text-danger"
+            *ngIf="(assignMedSecForm.touched || assignMedSecFormSubmit) && assignMedSecForm.get('isExpertMedSec').hasError('required')">
+            Please select one.
+          </div>
+        </div>
+      </div>
+      <div class="row" *ngIf="assignMedSecForm.get('isExpertMedSec').value=='false'">
+        <div class="col-lg-12 col-md-12">
+          <div class="form-group ">
+            <label>Idox M.S</label>
+            <select2 [data]="medicalSectreies" [cssImport]="true" width="100%"
+              (valueChanged)="changeMedicalSecretary($event)"
+              [ngClass]="{'is-invalid': assignMedSecForm.get('medSecID').errors && (assignMedSecForm.get('medSecID').touched||assignMedSecFormSubmit)}">
+            </select2>
+            <div class="invalid-feedback"
+              *ngIf="(assignMedSecForm.get('medSecID').touched||assignMedSecFormSubmit) && assignMedSecForm.get('medSecID').hasError('required')">
+              This field is required
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row ">
+        <div class="col-lg-12 col-md-12">
+          <div class="form-group ">
+            <label>Assign Date</label>
+            <input type="text" class="form-control" formControlName="assignDate" placeholder="Date" bsDatepicker
+              [ngClass]="{'is-invalid': assignMedSecForm.get('assignDate').errors && (assignMedSecForm.get('assignDate').touched||assignMedSecFormSubmit)}">
+            <div class="invalid-feedback"
+              *ngIf="(assignMedSecForm.get('assignDate').touched||assignMedSecFormSubmit) && assignMedSecForm.get('assignDate').hasError('required')">
+              This field is required
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-right mt-2 mb-2 mr-2">
+        <button type="type" class="btn btn-outline-secondary mr-2" (click)="this.modalRef.hide()">Close</button>
+        <button type="submit" class="btn btn-primary primary-gradient">Assign</button>
+      </div>
+    </form>
+  </div>
 </ng-template>
