--- a/src/app/Components/Medco CMS/outstanding-appointment-schedual/outstanding-appointment-schedual.component.html
+++ b/src/app/Components/Medco CMS/outstanding-appointment-schedual/outstanding-appointment-schedual.component.html
@@ -117,9 +117,9 @@
             <div class="row mt-3 border-top" *ngIf="appointmentTiming">
               <div class="col-lg-6 col-md-6">
                 <div class="form-group">
-                  <h5 class="content-color-primary mb-0">Date</h5>
-                  <input type="date" class="form-control" placeholder="" formControlName="slotDate" [ngClass]="{'is-invalid': bookAppointmentForm.get('slotDate').errors 
-                  && (bookAppointmentForm.get('slotDate').touched||bookAppointmentSubmit)}" />
+                  <h5 class="content-color-primary mb-0">Booking Date</h5>
+                  <input type="text" class="form-control" placeholder="Date" formControlName="slotDate" [ngClass]="{'is-invalid': bookAppointmentForm.get('slotDate').errors 
+                  && (bookAppointmentForm.get('slotDate').touched||bookAppointmentSubmit)}" bsDatepicker [minDate]="minDate" (ngModelChange)="changeDate($event)" />
                   <div class="text-danger"
                     *ngIf="(bookAppointmentForm.get('slotDate').touched||bookAppointmentSubmit) && bookAppointmentForm.get('slotDate').hasError('required')">
                     This field is required
@@ -127,9 +127,12 @@
                 </div>
                 <div class="form-group">
                   <h5 class="content-color-primary mb-0">Appointment Start Time</h5>
-                  <input type="time" class="form-control" formControlName="slotStartTime" [ngClass]="{'is-invalid': bookAppointmentForm.get('slotStartTime').errors 
+                  <timepicker [minuteStep]="minuteStep" [min]="timepickerCurrentTime" [showMeridian]="isMeridian" formControlName="slotStartTime" [ngClass]="{'is-invalid': bookAppointmentForm.get('slotStartTime').errors 
                   && (bookAppointmentForm.get('slotStartTime').touched||bookAppointmentSubmit)}"
-                    (change)="changeStartTime($event.target.value)">
+                    (ngModelChange)="changeStartTime($event)"></timepicker>
+                  <!-- <input type="time" class="form-control" formControlName="slotStartTime" [ngClass]="{'is-invalid': bookAppointmentForm.get('slotStartTime').errors 
+                  && (bookAppointmentForm.get('slotStartTime').touched||bookAppointmentSubmit)}"
+                    (change)="changeStartTime($event.target.value)"> -->
                   <div class="text-danger"
                     *ngIf="(bookAppointmentForm.get('slotStartTime').touched||bookAppointmentSubmit) && bookAppointmentForm.get('slotStartTime').hasError('required')">
                     This field is required
@@ -209,12 +212,9 @@
 <ng-template #templateConfirmBox>
   <div class="modal-header">
     <h5 class="text-warning">{{outstandingAppointments.expert}} is not available in this day or slot.</h5>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
-    </button>
   </div>
   <div class="modal-body">
-    <ul class="list-group border-top border-bottom list-group-flush">
+    <ul class="list-group border-bottom list-group-flush">
       <li class="list-group-item">
         <div class="media">
           <div class="custom-control custom-checkbox todo-checkbox">
