--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -196,6 +196,12 @@
                     <a routerLink="/MedcoCMS/Outstanding_Appointments" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i>
                         <span>Appointments</span></a>
+                        <a routerLink="/MedcoCMS/AssignedMedicalSecretaries" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i>
+                        <span>Assigned M.S</span></a>
+                        <a routerLink="/MedcoCMS/UnAssignedMedicalSecretaries" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i>
+                        <span>Un Assigned M.S</span></a>
                     <a routerLink="/MedcoCMS/Outstanding_Amendments" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i>
                         <span> Amendments</span></a>
