--- a/src/app/Components/Clinics/clinics-attendedclinics/clinics-attendedclinics.component.html
+++ b/src/app/Components/Clinics/clinics-attendedclinics/clinics-attendedclinics.component.html
@@ -18,7 +18,7 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <h5 class="card-title mb-0">Attended</h5>
+                            <h5 class="card-title mb-0">Attended Appointments</h5>
                         </div>
                     </div>
                     <div class="row">
