--- a/src/app/Components/Instruction Main/instruction-list/instruction-list.component.html
+++ b/src/app/Components/Instruction Main/instruction-list/instruction-list.component.html
@@ -1,80 +1,106 @@
 <div class="container-fluid bg-light-opac">
-  <div class="row">
-      <div class="container my-3 main-container">
-          <div class="row align-items-center">
-              <div class="col">
-                  <h2 class="content-color-primary page-title">Instructions</h2>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="row">
+        <div class="container my-3 main-container">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h2 class="content-color-primary page-title">Instructions</h2>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="container mt-4 main-container">
-  <div class="row">
-      <div class="col-sm-12 col-md-12">
-          <div class="card rounded-0 border-0 mb-3">
-              <div class="card-header">
-                  <div class="row">
-                      <div class="col-8">
-                          <h5 class="card-title mb-0">List</h5>
-                      </div>
-                      <div class="col text-right">
-                          <div class="dropdown">
-                              <button class="btn btn-link btn-sm text-secondary rounded-0 dropdown-toggle float-right icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" type="button">
-                                  <i class="fa fa-ellipsis-v"></i>
-                              </button>
-                              <div class="dropdown-menu dropdown-menu-right">
-                                  <a class="dropdown-item" href="#">
-                                      <i class="fa fa-exclamation-circle text-secondary"></i> Report</a>
-                                  <a class="dropdown-item" href="#">
-                                      <i class="fa fa-cog text-secondary"></i> Settings</a>
-                                  <a class="dropdown-item" href="#">
-                                      <i class="fa fa-trash text-secondary"></i> Remove</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="card-body">
-                  <table class="table">
-                      <thead>
-                          <tr>
-                              <th scope="col">Sr.#</th>
-                              <th scope="col" width="10%">First Name</th>
-                              <th scope="col" width="10%">Last Name</th>
-                              <th scope="col" width="10%">InstructionCode</th>
-                              <th scope="col" width="10%">MedicoRef</th>
-                              <th scope="col" width="10%">Gender</th>
-                              <th scope="col" width="10%">DOB</th>
-                              <th scope="col" width="10%">Mobile Number</th>
-                              <th scope="col" width="10%">Post Code</th>
-                              <th scope="col" width="20%">Actions</th>
-                          </tr>
-                      </thead>
-                      <tbody>
-                          <tr *ngFor="let item of instructions | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i=index;">
-                              <th scope="row">{{i+1}}</th>
-                              <td>{{item.firstName}}</td>
-                              <td>{{item.lastName}}</td>
-                              <td>{{item.instructionCode}}</td>
-                              <td>{{item.medicoRefNo}}</td>
-                              <td>{{item.gender}}</td>
-                              <td>{{item.dob | date:'mediumDate'}}</td>
-                              <td>{{item.mobileNumber}}</td>
-                              <td>{{item.postCode}}</td>
-                              <td>
-                                <button class="btn btn-sm primary-gradient mr-2">Details</button>
-                                <button class="btn btn-sm danger-gradient mr-2">Delete</button>
-                              </td>
-                          </tr>
-                      </tbody>
-                  </table>
-                  <ul class="pagination">
-                    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-12">
+            <div class="card rounded-0 border-0 mb-3">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-8">
+                            <h5 class="card-title mb-0">List</h5>
+                        </div>
+                        <div class="col text-right">
+                            <div class="dropdown">
+                                <button
+                                    class="btn btn-link btn-sm text-secondary rounded-0 dropdown-toggle float-right icon"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" type="button">
+                                    <i class="fa fa-ellipsis-v"></i>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-right">
+                                    <a class="dropdown-item" href="#">
+                                        <i class="fa fa-exclamation-circle text-secondary"></i> Report</a>
+                                    <a class="dropdown-item" href="#">
+                                        <i class="fa fa-cog text-secondary"></i> Settings</a>
+                                    <a class="dropdown-item" href="#">
+                                        <i class="fa fa-trash text-secondary"></i> Remove</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Sr.#</th>
+                                <th scope="col" width="10%">First Name</th>
+                                <th scope="col" width="10%">Last Name</th>
+                                <th scope="col" width="10%">InstructionCode</th>
+                                <th scope="col" width="10%">MedicoRef</th>
+                                <th scope="col" width="10%">Gender</th>
+                                <th scope="col" width="10%">DOB</th>
+                                <th scope="col" width="10%">Mobile Number</th>
+                                <th scope="col" width="10%">Post Code</th>
+                                <th scope="col" width="20%">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr
+                                *ngFor="let item of instructions | paginate: { itemsPerPage: 10, currentPage: currentPage }; let i=index;">
+                                <th scope="row">{{i+1}}</th>
+                                <td>{{item.firstName}}</td>
+                                <td>{{item.lastName}}</td>
+                                <td>{{item.instructionCode}}</td>
+                                <td>{{item.medicoRefNo}}</td>
+                                <td>{{item.gender}}</td>
+                                <td>{{item.dob | date:'mediumDate'}}</td>
+                                <td>{{item.mobileNumber}}</td>
+                                <td>{{item.postCode}}</td>
+                                <td>
+                                    <button class="btn btn-sm primary-gradient mr-2">Details</button>
+                                    <button class="btn btn-sm danger-gradient mr-2"
+                                        (click)="openConfirmBox(item.id,templateConfirmBox)">Delete</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <ul class="pagination">
+                        <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<ng-template #templateConfirmBox>
+    <div class="modal-header">
+        <h5>Are you sure you want to delete this. Specify any reason?</h5>
+    </div>
+    <div class="modal-body">
+        <form #confirmForm="ngForm" (ngSubmit)="deleteInstruction()">
+            <div class="row ">
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group ">
+                        <label>Reason</label>
+                        <textarea type="text" class="form-control" placeholder="" autofocus="true" name="Reason" [(ngModel)]="model.Reason"></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-3">
+                <button type="button" class="mb-2 btn btn-outline-secondary btn-rounded mr-2" (click)="modalRef.hide()">Close</button>
+                <button type="submit" class="mb-2 btn btn-primary btn-rounded" >Confirm</button>
+            </div>
+        </form>
+    </div>
+</ng-template>
