--- a/src/app/Components/MedicalSecretary/medical-secretary-list/MedicalSecretaryList.component.html
+++ b/src/app/Components/MedicalSecretary/medical-secretary-list/MedicalSecretaryList.component.html
@@ -28,6 +28,9 @@
               <tr>
                 <th scope="col">Sr.</th>
                 <th scope="col">Name</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Post Code</th>
+                <th scope="col">Phone No</th>
                 <th scope="col">Email</th>
                 <th scope="col">Status</th>
                 <th scope="col">Action</th>
@@ -35,27 +38,28 @@
             </thead>
             <tbody>
               <tr
-                *ngFor="let item of MedicalSecretaryData |filter:filter| paginate: { itemsPerPage: 6, currentPage: p };  let i = index">
-                <td style="display: table-cell;">{{i+1}}</td>
-                <td style="display: table-cell;">
-                  {{item.fullName}}
+                *ngFor="let item of MedicalSecretaryData | paginate: { itemsPerPage: 6, currentPage: currentPage };  let i = index">
+                <td>{{i+1}}</td>
+                <td>{{item.firstName}}</td>
+                <td>{{item.gender}}</td>
+                <td>{{item.postCode}}</td>
+                <td>{{item.phoneNo}}</td>
+                <td>{{item.email}}</td>
+                <td>
+                  <span *ngIf="item.isActive == true" class="text-success"><i class="material-icons">check</i></span>
+                  <span *ngIf="item.isActive == false" class="text-danger"><i class="material-icons">close</i></span>      
                 </td>
-                <td style="display: table-cell;">
-                  {{item.email}}
-                </td>
-                <td style="display: table-cell;" *ngIf="item.status == '1'" class="text-success"><i class="material-icons">check</i></td>
-                <td style="display: table-cell;" *ngIf="item.status == '0'" class="text-danger"><i class="material-icons">close</i></td>
-                <td style="display: table-cell;">
-                  <a class="btn pink-gradient px-3 btn-sm mr-2" [routerLink]="['/MedicalSecretary/Edit/',item.id]">Edit
-                  </a>
-                  <button class="btn danger-gradient px-3 btn-sm" (click)="Delete(item.id)">Delete
-                  </button>
+                <td>
+                  <a style="cursor: pointer;" class="text-success mr-2" 
+                  [routerLink]="['/MedicalSecretary/Edit/',item.id]"><i class="material-icons">edit</i></a>
+                  <a style="cursor: pointer;" class="text-danger mr-2" 
+                  (click)="Delete(item.id)"><i class="material-icons">delete</i></a>
                 </td>
               </tr>
             </tbody>
           </table>
           <ul class="pagination">
-            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
           </ul>
         </div>
       </div>
