--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -60,6 +60,11 @@
                             Add Clinic Plan
                         </span>
                     </a>
+                    <a routerLink="/Experts/record-review" class="nav-link pink-gradient-active"><i class="material-icons icon"></i>
+                        <span>
+                            Record Review
+                        </span>
+                    </a>
                     <a routerLink="/Experts/Medco_Expert_Clinics" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>
                             Clinics</span></a>
@@ -90,6 +95,8 @@
                             class="material-icons icon"></i><span>M.S List</span></a>
                     <a routerLink="/MedicalSecretary/NewlyAssigned" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>Newly Assigned</span></a>
+                    <a routerLink="/MedicalSecretary/view-report" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>View Report </span></a>
                 </li>
             </ul>
         </li>
