complete report writing work

--- a/src/app/Components/Experts/epert-basic-info/epert-basic-info.component.html
+++ b/src/app/Components/Experts/epert-basic-info/epert-basic-info.component.html
@@ -24,9 +24,9 @@
     </div>
     <div class="col-lg-6 col-md-6">
       <div class="form-group ">
-        <label>Midel Name</label>
+        <label>Middle Name</label>
         <input type="text" class="form-control" appAlphabetsOnly formControlName="middleName" [ngClass]="{'is-invalid': basicInfoForm.get('middleName').errors 
-        && (basicInfoForm.get('middleName').touched||submitted)}" placeholder="Midel Name">
+        && (basicInfoForm.get('middleName').touched||submitted)}" placeholder="Middle Name">
       </div>
     </div>
     <div class="col-lg-6 col-md-6">
