--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -97,6 +97,11 @@
                             class="material-icons icon"></i><span>Newly Assigned</span></a>
                     <a routerLink="/MedicalSecretary/view-report" class="nav-link pink-gradient-active"><i
                             class="material-icons icon"></i><span>View Report </span></a>
+                    <a routerLink="/MedicalSecretary/report-conversation" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>Report Conversation </span></a>
+                            
+                    <a routerLink="/MedicalSecretary/hold-reports" class="nav-link pink-gradient-active"><i
+                        class="material-icons icon"></i><span>Hold Reports </span></a>
                 </li>
             </ul>
         </li>
