--- a/src/app/Components/Clinics/clinics-attendedclinics/clinics-attendedclinics.component.html
+++ b/src/app/Components/Clinics/clinics-attendedclinics/clinics-attendedclinics.component.html
@@ -56,7 +56,7 @@
                                 <th scope="row">{{i+1}}</th>
                                 <td>{{item.instructionCode}}</td>
                                 <td>{{item.expert}}</td>
-                                <td>{{item.attendedDate}}</td>
+                                <td>{{item.attendedDate | date:'dd/MM/yyyy'}}</td>
                                 <td>{{item.slotStartTime}}</td>
                                 <td>{{item.slotEndTime}}</td>
                                 <td>
