--- a/src/app/Components/Clinics/clinics-clinicplans/clinics-clinicplans.component.html
+++ b/src/app/Components/Clinics/clinics-clinicplans/clinics-clinicplans.component.html
@@ -104,7 +104,7 @@
                       <div class="custom-control custom-radio">
                         <input type="radio" class="custom-control-input" value="true" name="isAvailabilityTimings"
                           checked="true" id="yes" formControlName="isAvailabilityTimings"
-                          (change)="startEndTimeDisabled=true">
+                          (change)="disabledStartEndTime(true)">
                         <label class="custom-control-label" for="yes"> <span class=""> Yes
                           </span></label>
                       </div>
@@ -112,7 +112,7 @@
                     <div class="col-lg-3 col-md-3">
                       <div class="custom-control custom-radio">
                         <input type="radio" class="custom-control-input" value="false" name="isAvailabilityTimings"
-                          id="no" formControlName="isAvailabilityTimings" (change)="startEndTimeDisabled=false">
+                          id="no" formControlName="isAvailabilityTimings" (change)="disabledStartEndTime(false)">
                         <label class="custom-control-label" for="no"> <span class=""> No
                           </span></label>
                       </div>
