--- a/src/app/Components/Experts/expert-sla/availability/availability.component.html
+++ b/src/app/Components/Experts/expert-sla/availability/availability.component.html
@@ -20,8 +20,8 @@
     <tr *ngFor="let item of expertAvailabilityList; let i=index;">
       <td>{{i+1}}</td>
       <td>{{item.days}}</td>
-      <td>{{item.startTime}}</td>
-      <td>{{item.endTime}}</td>
+      <td>{{item.startTime | date:'HH:mm'}}</td>
+      <td>{{item.endTime | date:'HH:mm'}}</td>
       <td>{{item.startLunchTime}}</td>
       <td>{{item.endLunchTime}}</td>
       <td>
