--- a/src/app/Components/MedicalSecretary/newly-assigned/newly-assigned.component.html
+++ b/src/app/Components/MedicalSecretary/newly-assigned/newly-assigned.component.html
@@ -1,3 +1,4 @@
+<ngx-loading-bar color="#1e90ff" height="5px"></ngx-loading-bar>
 <div class="container-fluid bg-light-opac">
     <div class="row">
         <div class="container my-3 main-container">
