--- a/src/app/Components/MedicalSecretary/view-report/view-report.component.html
+++ b/src/app/Components/MedicalSecretary/view-report/view-report.component.html
@@ -1,71 +1,293 @@
+<ngx-loading-bar color="#1e90ff" height="5px"></ngx-loading-bar>
 <div class="container-fluid bg-light-opac">
-  <div class="row">
-      <div class="container my-3 main-container">
-          <div class="row align-items-center">
-              <div class="col">
-                  <h2 class="content-color-primary page-title">View Report</h2>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-
-<div class="container mt-4 main-container">
-  <div class="row">
-      <div class="col-12 col-md-12 col-lg-12">
-          <div class="card mb-4">
-              <div class="card-header border-bottom">
-                  <div class="media">
-                      <div class="icon-circle icon-40 bg-light-primary mr-3">
-                          <i class="material-icons">ac_unit</i>
-                      </div>
-                      <div class="media-body">
-                          <h6 class="my-0 content-color-primary">Record Source</h6>
-                          <p class="small mb-0">Cropped important part from record.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="card-body">
-
-              </div>
-          </div>
-      </div>
-      <div class="col-12 col-md-12 col-lg-12">
-        <div class="card mb-4">
-            <div class="card-header border-bottom">
-                <div class="media">
-                    <div class="icon-circle icon-40 bg-light-primary mr-3">
-                        <i class="material-icons">ac_unit</i>
-                    </div>
-                    <div class="media-body">
-                        <h6 class="my-0 content-color-primary">References</h6>
-                        <p class="small mb-0">Cropped image references</p>
-                    </div>
+    <div class="row">
+        <div class="container my-3 main-container">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h2 class="content-color-primary page-title">View Report</h2>
                 </div>
-            </div>
-            <div class="card-body">
-              
             </div>
         </div>
     </div>
-    <div class="col-12 col-md-12 col-lg-12">
-      <div class="card mb-4">
-          <div class="card-header border-bottom">
-              <div class="media">
-                  <div class="icon-circle icon-40 bg-light-primary mr-3">
-                      <i class="material-icons">ac_unit</i>
-                  </div>
-                  <div class="media-body">
-                      <h6 class="my-0 content-color-primary">Responce</h6>
-                      <p class="small mb-0">Responce from expert.</p>
-                  </div>
-              </div>
-          </div>
-          <div class="card-body">
-            
-          </div>
-      </div>
-  </div>
-  </div>
-  <!-- content page ends -->
 </div>
+
+<div class="container mt-4 main-container">
+
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card mb-4">
+                <div class="card-header border-bottom">
+                    <div class="media">
+                        <div class="media-body">
+                            <h6 class="my-0 content-color-primary">Record Source</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <table class="table">
+                        <tr>
+                            <th>Image</th>
+                            <th>Note</th>
+                            <th>IsCaseClosed</th>
+                            <th>Action</th>
+                        </tr>
+                        <tr *ngFor="let item of expertRPTLog;let i =index;">
+                            <td>
+                                <div *ngIf="item.isImage" style="cursor: pointer;">
+                                    <img [src]="item.imageDataUrl" width="80px" height="80px" (click)="openImageModel(item.imageDataUrl,displayImagePoup)">
+                                </div>
+                                <div *ngIf="!item.isImage || item.imageDataUrl==''">
+                                    <img src="../../../../assets/img/Not Image.png" width="80px" height="80px">
+                                </div>
+                            </td>
+                            <td>{{item.expertRptLogUserNote}}</td>
+                            <td>
+                                <span *ngIf="item.isCaseClosed">Yes</span>
+                                <span *ngIf="!item.isCaseClosed">No</span>
+                            </td>
+                            <td>
+                                <button style="cursor: pointer;" class="btn btn-success btn-sm mr-2" (click)="getExpertRptLogReference(item.expertRptLogID)">Reference</button>
+                                <button style="cursor: pointer;" class="btn btn-danger btn-sm mr-2" (click)="getExpertRptLogResponse(item.expertRptLogID)">Responce</button>
+                                <div class="btn-group" dropdown *ngIf="!item.isCaseClosed">
+                                    <a style="cursor: pointer;" id="button-animated" class="btn btn-sm btn-primary dropdown-toggle text-white"
+                                        dropdownToggle aria-controls="dropdown-animated">Actions
+                                        <span class="caret"></span>
+                                    </a>
+                                    <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-animated">
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openRecordSourceModal(recordSourceCellTemplate,'Agree',item.expertRptLogID)">Agree</a></li>
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openRecordSourceModal(recordSourceCellTemplate,'Disagree',item.expertRptLogID)">Disagree</a></li>
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openRecordSourceModal(recordSourceCellTemplate,'Other',item.expertRptLogID)">Other</a></li>
+                                    </ul>
+                                </div>
+                                <span *ngIf="item.isCaseClosed"  class="badge badge-danger mb-2">Case Closed</span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card mb-4">
+                <div class="card-header border-bottom">
+                    <div class="media">
+                        <div class="media-body">
+                            <h6 class="my-0 content-color-primary">References</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <table class="table">
+                        <tr>
+                            <th>Image</th>
+                            <th>Note</th>
+                            <th>Action</th>
+                        </tr>
+                        <tr *ngFor="let item of expertRPTLogReferences;let i =index;">
+                            <td>
+                                <div *ngIf="!item.isRefImage || item.imageDataUrl==''">
+                                    <img src="../../../../assets/img/Not Image.png" width="80px" height="80px">
+                                </div>
+                                <div *ngIf="item.isRefImage" style="cursor: pointer;">
+                                    <img [src]="item.imageDataUrl" width="80px" height="80px" (click)="openImageModel(item.imageDataUrl,displayImagePoup)">
+                                </div>
+                            </td>
+                            <td>{{item.referenceNote}}</td>
+                            <td>
+                                <div *ngIf="!item.isCaseClosed">
+                                    <span class="badge badge-primary mb-2">Open</span>
+                                </div>
+                                <div *ngIf="item.isCaseClosed">
+                                    <span class="badge badge-danger mb-2">Case Closed</span>
+                                </div>
+                                <!-- <div class="btn-group" dropdown *ngIf="!item.isCaseClosed">
+                                    <a style="cursor: pointer;" id="button2-animated" class="btn btn-sm btn-primary dropdown-toggle text-white"
+                                        dropdownToggle aria-controls="dropdown-animated">Actions
+                                        <span class="caret"></span>
+                                    </a>
+                                    <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button2-animated">
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openReferenceImageModal(referenceCellTemplate,'Agree',item.expertRptLogReferenceImgID)">Agree</a></li>
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openReferenceImageModal(referenceCellTemplate,'Disagree',item.expertRptLogReferenceImgID)">Disagree</a></li>
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openReferenceImageModal(referenceCellTemplate,'Other',item.expertRptLogReferenceImgID)">Other</a></li>
+                                    </ul>
+                                </div> -->
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card mb-4">
+                <div class="card-header border-bottom">
+                    <div class="media">
+                        <div class="media-body">
+                            <h6 class="my-0 content-color-primary">Responce</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <table class="table">
+                        <tr>
+                            <th>Image</th>
+                            <th>Note</th>
+                            <th>Action</th>
+                        </tr>
+                        <tr *ngFor="let item of expertRptLogResponse">
+                            <td>
+                                <div *ngIf="item.isImage">
+                                    <img [src]="item.imageDataUrl" width="80px" height="80px" (click)="openImageModel(item.imageDataUrl,displayImagePoup)">
+                                </div>
+                                <div *ngIf="!item.isImage || item.imageDataUrl==''">
+                                    <img src="../../../../assets/img/Not Image.png" width="80px" height="80px">
+                                </div>
+                            </td>
+                            <td>{{item.expertRptLogResponseNote}}</td>
+                            <td>
+                                <div class="btn-group" dropdown *ngIf="!item.logResponseIsCaseClosed && item.isOpen">
+                                    <a style="cursor: pointer;" id="button-animated" class="btn btn-sm btn-primary dropdown-toggle text-white"
+                                        dropdownToggle aria-controls="dropdown-animated">Actions
+                                        <span class="caret"></span>
+                                    </a>
+                                    <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-animated">
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openResponceModal(responceCellTemplate,'Agree',item.expertRptLogResponseID)">Agree</a></li>
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openResponceModal(responceCellTemplate,'Disagree',item.expertRptLogResponseID)">Disagree</a></li>
+                                        <li role="menuitem"><a style="cursor: pointer;" class="dropdown-item"
+                                                (click)="openResponceModal(responceCellTemplate,'Other',item.expertRptLogResponseID)">Other</a></li>
+                                    </ul>
+                                </div>
+                                <div *ngIf="!item.logResponseIsCaseClosed && !item.isOpen">
+                                    <span class="badge badge-danger mb-2">Responded</span>
+                                </div>
+                                <div *ngIf="item.logResponseIsCaseClosed && !item.isOpen">
+                                    <span class="badge badge-danger mb-2">Case Closed</span>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- content page ends -->
+</div>
+
+<ng-template #recordSourceCellTemplate>
+    <div class="modal-header bg-primary">
+        <h4 class="modal-title pull-left text-white">Responce</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form #f="ngForm" (ngSubmit)="submitRecordSourceResponce()">
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group">
+                        <label>Note</label>
+                        <textarea class="form-control" #note="ngModel" name="note" [(ngModel)]="modal.note"></textarea>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group">
+                        <label>Upload Files</label>
+                        <Input type="file" #file class="form-control" (change)="onSelectFiles(file.files)">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-lg-12 text-right">
+                    <button type="button" class="btn btn-secondary btn-sm mr-2" (click)="modalRef.hide()">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-sm mr-2">Save</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</ng-template>
+<ng-template #referenceCellTemplate>
+    <div class="modal-header bg-primary">
+        <h4 class="modal-title pull-left text-white">Responce</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form (ngSubmit)="submitReferenceResponce()">
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group">
+                        <label>Note</label>
+                        <textarea class="form-control" #note="ngModel" name="note" [(ngModel)]="modal.note"></textarea>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group">
+                        <label>Upload Files</label>
+                        <Input type="file" #file multiple class="form-control" (change)="onSelectFiles(file.files)">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-lg-12 text-right">
+                    <button class="btn btn-secondary btn-sm mr-2" (click)="modalRef.hide()">Cancel</button>
+                    <button class="btn btn-primary btn-sm mr-2">Save</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</ng-template>
+<ng-template #responceCellTemplate>
+    <div class="modal-header bg-primary">
+        <h4 class="modal-title pull-left text-white">Responce</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form (ngSubmit)="submitResponce()">
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group">
+                        <label>Note</label>
+                        <textarea class="form-control" #note="ngModel" name="note" [(ngModel)]="modal.note"></textarea>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-md-12">
+                    <div class="form-group">
+                        <label>Upload Files</label>
+                        <Input type="file" #file class="form-control" (change)="onSelectFiles(file.files)">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 col-lg-12 text-right">
+                    <button type="button" class="btn btn-secondary btn-sm mr-2" (click)="modalRef.hide()">Cancel</button>
+                    <button type="submit" class="btn btn-primary btn-sm mr-2">Save</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</ng-template>
+
+
+<ng-template #displayImagePoup>
+    <div class="modal-body">
+        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <img class="thumbnail" [src]="imageUrl">
+    </div>
+  </ng-template>
