working on client quesionaries

--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -126,6 +126,16 @@
                             class="material-icons icon"></i><span>Summary
                         </span></a>
                 </li>
+                <li class="nav-item">
+                    <a routerLink="/MedicalPerforma/client-question" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>Client Questions
+                        </span></a>
+                </li>
+                <li class="nav-item">
+                    <a routerLink="/MedicalPerforma/expert-question" class="nav-link pink-gradient-active"><i
+                            class="material-icons icon"></i><span>Expert Questions
+                        </span></a>
+                </li>
             </ul>
         </li>
         <li class="nav-item">
